Tim Comments PsychPsy darft1

--- a/submission_3/football_domesticabuse.tex
+++ b/submission_3/football_domesticabuse.tex
@@ -83,6 +83,7 @@
 
 %The abstract should be on a separate page and be no longer than 150 words. Five to seven relevant keywords should be listed directly under the abstract on the same page.
 
+%I think we should put a brief sentence here about the toxic masculinity. Lure them in with mention of the  psychological theory/mechanism of action. 
 
 Domestic abuse is increasingly recognised as a serious public health concern worldwide. Previous research has suggested a link between national football tournaments and domestic abuse. While hypothesized to be a significant factor, the role alcohol plays in this relationship is unknown. Using 8 years' worth of crime data from the third largest police force in England, we show that the number of reported alcohol-related domestic abuse cases increases by 61\% following an England victory ($N=281,653$). This effect is specific to male-to-female cases, survives various robustness checks, and its time course is strongly consistent with a causal link between England's victory and an increase in alcohol-related domestic abuse. We find a comparable increase in other, violent, male to female, alcohol-related offences on England win days. Our study provides the first quantitative evidence for the instrumental role alcohol plays in male-perpetrated domestic abuse following a national football team's victory.
 %147
@@ -126,7 +127,9 @@ To investigate this question, we test if the daily number of reported alcohol an
 
 \subsection*{West Midlands Crime Dataset}
 
-Our dataset comprises all crimes and specific types of incidents (such as domestic abuse) that have been reported to the WMP. The WMP is the third largest police force in England \cite{Homeoffice}, serving an estimated 2.9 million people in 2017 \cite{populationfigure} in the period between 2010 and 2018. The first half of 2017 has been excluded due to missing data. The number of reported domestic abuse cases is the sum of crimes that have a domestic abuse marker, and all domestic abuse incidents. Crimes that have a domestic abuse marker indicate cases of domestic abuse that meet the criteria for notifiable offences in the UK, whereas domestic abuse incidents refer to cases that do not qualify as a crime. For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We restricted our analyses to cases with one victim and one offender ($N=281,653$). We can also identify repeat offenders and victims by their unique person identifier. Domestic abuse cases comprise about 31\% of all recorded crimes and incidents in the dataset, and about 23\% of all domestic abuse cases are alcohol-related. In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.6-3 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.35-1 cases per 100,000 individuals. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. All of these tournaments took place in the months of June and July.
+%the "notifiable incidents" language might sounde strange to some. Could we include an example crime like assault or GBH?
+
+Our dataset comprises all crimes and specific types of incidents (such as domestic abuse) that have been reported to the WMPin the period between 2010 and 2018. The first half of 2017 has been excluded due to missing data. The WMP is the third largest police force in England \cite{Homeoffice}, serving an estimated 2.9 million people in 2017 \cite{populationfigure}. The number of reported domestic abuse cases is the sum of crimes that have a domestic abuse marker, and all domestic abuse incidents. Crimes that have a domestic abuse marker indicate cases of domestic abuse that meet the criteria for notifiable offences in the UK, whereas domestic abuse incidents refer to cases that do not qualify as a crime. For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We restricted our analyses to cases with one victim and one offender ($N=281,653$). We can also identify repeat offenders and victims by their unique person identifier. Domestic abuse cases comprise about 31\% of all recorded crimes and incidents in the dataset, and about 23\% of all domestic abuse cases are alcohol-related. In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.6-3 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.35-1 cases per 100,000 individuals. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. All of these tournaments took place in the months of June and July.
 
 In the UK, the term ``domestic abuse'' refers to a wide range of behavioural patterns, from physical and sexual violence to psychological, emotional, financial abuse, threatening behaviour, stalking and harassment, either within a family or an intimate relationship \cite{ONS}. Previous research has mostly focused on IPV, the largest subcategory of domestic abuse. While IPV is more common than abuse perpetrated by family members \cite{ONS}, our dataset does not contain information about the exact relationship between the victim and perpetrator, therefore we cannot separate the two types of abuse, and we will refer to them collectively as ``domestic abuse''.
 
@@ -134,6 +137,8 @@ In the UK, the term ``domestic abuse'' refers to a wide range of behavioural pat
 Our dataset contains all cases of domestic abuse that have been reported to the West Midlands Police between 2010 and 2018, but the vast majority of domestic abuse incidents in fact never get reported (according to the Crime Survey of England and Wales, only 17\% of domestic abuse victims reported the abuse to the police between April 2017 and March 2018; \citeNP{ONS}). This substantial reporting bias, and its potential correlation with other contextual factors warrants a careful interpretation of the estimates from any quantitative study investigating domestic abuse, and highlights the importance of utilising a mixed methods approach to explore the factors contributing to the prevalence of domestic abuse. 
 
 \section*{Results}
+
+%Could make an argument for moving the first two paras into methods, but I don't think it will matter.
 
 In the following regressions, each observation is a day in the period between 2010 and 2018, and our main outcome variable is the number of alcohol and non-alcohol related domestic abuse cases reported to have been perpetrated on that day. To investigate how national football tournaments affect our outcome variables, we classify each day in our dataset as either a day on which England won (England win), lost (England lost) or drew (England draw), a day after an England match day (After England), any other day during the months of the tournament (Tournament on), or any other day during the rest of the year (Non-tournament day). 
 
@@ -191,6 +196,8 @@ AIC & 45,539.500 & 45,536.770 & 45,530.360 & 41,959.280 \\
     \end{tablenotes}
 \end{threeparttable} }
 \end{table*}
+
+% Tim doesn't like stargazer default p-value thresholds
 
 Further interacting alcohol with the rest of the time-specific control variables results in a substantially improved model fit (see column 4), but does not alter the effect of an England win on alcohol-related domestic abuse (61\%, 95\% CI [32\%--96\%]). The results also reveal a smaller, 9\%, 95\% CI [1\%--17\%] increase in non-alcohol related cases on days following an England match day, potentially the result of a temporal spillover effect from the previous match day. We also see an 8\%, 95\% CI [2\%--14\%] decrease in alcohol-related cases during the tournament, but not on England match days, perhaps stemming from heavy drinking being mostly concentrated around England match (and particularly England win) days, and relatively lower alcohol consumption on other days during the tournament. 
 
