--- a/submission_5/coverletter.tex
+++ b/submission_5/coverletter.tex
@@ -17,15 +17,18 @@
 %    Science Advances editors require authors to list four suggested reviewers in the cover letter that must be provided with every manuscript submission. These suggestions will not necessarily be used by editors but will be referenced as an indication of the authors' view of the research landscape of the submitted work. When identifying potential reviewers, authors are strongly encouraged to keep both gender and country of origin in mind. AAAS is committed to fostering diversity throughout the global scientific community and we believe that gender and international diversity of scientists participating in research assessment increases the fairness and quality of the peer review process.
 
 
+%Science Advances is the American Association for the Advancement of Science’s (AAAS) open access multidisciplinary journal, publishing impactful research papers and reviews in any area of science, in both disciplinary-specific and broad, interdisciplinary areas. The mission of Science Advances is to provide fair, fast, and expert peer review to authors and a vetted selection of research, freely available to readers. Led by a team of distinguished scientists and allowing flexible article formats, Science Advances supports the AAAS mission by extending the capacity of Science magazine to identify and promote significant advances in science and engineering across a wide range of areas. The journal’s use of evolving digital publishing technologies plays a critical role in building and sustaining AAAS’s mission as a global participant and advocate for the communication and use of science to benefit humankind.
+
+
 \opening{Dear Jeremy Berg,} % Addressed to the editor in chief
 
-Please consider our manuscript ``Alcohol plays an instrumental role in the link between football and domestic abuse: evidence from England'' for publication as a Research Article in \textit{Science Advances}. Previous studies have suggested a link between football and domestic abuse, but the exact nature of this relationship, and the extent to which alcohol contributes to it, has not yet been investigated. Exploring the pathways through which watching football increases propensity for violence will deepen our understanding of the environments that precipitate domestic abuse, and can inform preventive policy measures.
+Please consider our manuscript ``Alcohol plays an instrumental role in the link between football and domestic abuse: evidence from England'' for publication as a Research Article in \textit{Science Advances}. Previous studies have suggested a potential link between football and domestic abuse, but the characteristics of this relationship (including its causal nature), and the extent to which alcohol contributes to it has not yet been investigated. Exploring the pathways through which football tournaments increase propensity for violence will deepen our understanding of the environments that precipitate domestic abuse, and can inform the design of effective policy measures.
 
 
 Our results show that the number of reported alcohol-related domestic abuse cases increases by 61\% following an England victory
-in a national football tournament, while there is no comparable effect on non-alcohol related domestic abuse. This effect is specific to male-to-female cases, and its time course is strongly consistent with a causal link between England's victory and an increase in alcohol-related domestic abuse. We also find a comparable increase in other, violent, male to female, alcohol-related offences on England win days. These results strongly implicate masculinity construction and alcohol consumption as the pathway through which football increases male-perpetrated violence against women. In addition, we find that national rugby tournaments have no comparable effects on the reported number of domestic abuse cases. To test the robustness of the win-effect, our study also involves a re-analysis of data used in a previous study. 
+in a national football tournament, while there is no comparable effect on non-alcohol related domestic abuse. This effect is specific to male-to-female cases, and its time course is strongly consistent with a causal link between England's victory and an increase in alcohol-related domestic abuse. We also find a comparable increase in other, violent, male to female, alcohol-related offences on England win days. These results strongly implicate masculinity construction and alcohol consumption as the pathway through which football increases male-perpetrated violence against women. In addition, we find that national rugby tournaments have no comparable effects on the reported number of domestic abuse cases. The effect survives various robustness checks, including a re-analysis of data used in a previous study. 
 
-Our study significantly advances our understanding of the link between the world's most popular sport and domestic abuse, and we believe it fits \textit{Science Advances}' multidisciplinary profile. We would like to suggest Jonathan N. Katz as a potential Deputy Editor, Jennifer Earl as a potential Associate Editor, and Kath Woodward (The Open University), John Williams (University of Leicester), y, z as reviewers. We confirm that this manuscript has not been published elsewhere, and is not under consideration by another journal.
+Our study significantly advances our understanding of the link between the world's most popular sport and domestic abuse, and we believe it fits \textit{Science Advances}' multidisciplinary profile. We would like to suggest Jonathan N. Katz as a potential Deputy Editor, Jennifer Earl as a potential Associate Editor, and Kath Woodward (The Open University), John Williams (University of Leicester), Paul J. Fleming (University of Michigan), Kerry O'Brien (Monash University) as reviewers. We confirm that this manuscript has not been published elsewhere, and is not under consideration by another journal.
 
 Thank you for your time and consideration.
 
