--- a/submission_7/footballrefs.bib
+++ b/submission_7/footballrefs.bib
@@ -1,9 +1,25 @@
-@techreport{HomeOffice2011,
+@techreport{ep,
+author = {Prpic, Martina and Rosamund, Shreeves},
+title = {{Violence against women in the EU: State of play}},
+url = {http://www.europarl.europa.eu/thinktank/en/document.html?reference=EPRS\_BRI(2018)630296},
+year = {2018}
+}
+
+
+
+@techreport{Office2019,
 author = {{Home Office}},
-institution = {Home Office},
-title = {{The National Standard for Incident Recording}},
-url = {https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment{\_}data/file/116658/count-nsir11.pdf},
-year = {2011}
+pages = {9},
+title = {{Home Office Counting Rules for Recorded Crime - Crime Flags}},
+url = {https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment{\_}data/file/791106/count-flags-apr-2019.pdf},
+year = {2019}
+}
+@article{Cameron1990a,
+abstract = {A property of the Poisson regression model is mean-variance equality, conditional on explanatory variables. 'Regression-based' tests for this property are proposed in a very general setting. Unlike classical statistical tests, these tests require specification of only the mean-variance relationship under the alternative, rather than the complete distribution whose choice is usually arbitrary. The optimal regression-based test is easily computed as the t-test from an auxiliary regression. If a distribution under the alternative hypothesis is in fact specified and is in the Katz system of distributions or is Cox's local approximation to the Poisson, the score test for the Poisson distribution is equivalent to the optimal regression-based test. {\textcopyright} 1990.},
+author = {Cameron, A. Colin and Trivedi, Pravin K.},
+journal = {Journal of Econometrics},
+title = {{Regression-based tests for overdispersion in the Poisson model}},
+year = {1990}
 }
 @techreport{HomeOffice2019,
 author = {{Home Office}},
@@ -11,6 +27,13 @@ institution = {Home Office},
 title = {{Crime Recording General Rules}},
 url = {https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment{\_}data/file/854733/count-general-dec-2019.pdf},
 year = {2019}
+}
+@techreport{HomeOffice2011,
+author = {{Home Office}},
+institution = {Home Office},
+title = {{The National Standard for Incident Recording}},
+url = {https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment{\_}data/file/116658/count-nsir11.pdf},
+year = {2011}
 }
 @article{Graham2017,
 author = {Graham, Kathryn and Wilson, Ingrid and Taft, Angela},
@@ -95,8 +118,8 @@ year = {2018}
 @misc{populationfigure,
 author = {{Office for National Statistics}},
 title = {{Labour Market Profile - West Midlands (Met County)}},
-url = {https://www.nomisweb.co.uk/reports/lmp/la/1967128614/report.aspx{\#}tabrespop},
-year = {2017}
+url = {https://www.nomisweb.co.uk/reports/lmp/la/1967128614/report.aspx?pc=wv111rd},
+year = {2018}
 }
 @article{Javaid2015,
 abstract = {This article sets out to explore the relationship between alcohol and intimate partner violence. This research will explore the role that alcohol contributes to intimate partner violence and how it influences such a phenomenon. The empirical research is based on 12 semi-structured interviews with professionals who deal with or have dealt with victims and/or offenders of intimate partner violence. The professionals range from academics to social workers in the North East region within the United Kingdom. By adopting a qualitative approach, this research found that alcohol was used as an excuse in intimate partner violence cases. The data presented herein only give an insight into the discourses of professionals in relation to this topic rather than the views of the victims and offenders themselves. This research stipulates that alcohol is not causal in relation to intimate partner violence but it does offer the offender a 'shield', which allows them to identify themselves not as a 'violent abuser' but rather as someone whose drinking can lead them to do things they otherwise would not do. Javaid 76 Introduction The aim of this study is to understand the experiences of professionals dealing with alcohol and intimate partner violence; these professionals hypothesize about their heterosexual, rather than lesbian or gay, clients. It is, of course, impossible from a study of 12 professionals to determine the relationship between substance abuse and partner violence. The aim of this study, though, is to carefully and rigorously examine the professionals' experiences of dealing with alcohol and intimate partner violence, as there has been a lack of social research on this area of study, more specifically, in the North East region within the United Kingdom. However, international concern about the issue of intimate partner violence still continues to grow. This includes some consideration of a link between violent behaviour and alcohol—the nature of which has not been clearly defined. The connection between intimate partner violence and alcohol is certainly intricate and mediated by significant economic, etiologic, and social factors. This research gives an in-depth analysis into several aspects regarding intimate partner violence and alcohol. It is identified that this research cannot address all relevant issues, but an attempt has been made to achieve a balanced account of current knowledge and thinking. Due to the small sample size in this study (n=12), the results cannot be generalised; but the purpose of this research is to generate fine-grained, meaningful, in-depth qualitative data to explore specific details that the professionals choose to impart. Feminist theory is used as a foundation in this research to discuss the themes of power and control in support of the research findings. Feminist theory within intimate partner violence stresses power and gender inequality within opposite-sex relationships. It focuses on societal messages that allow men's use of aggression and violence throughout life, and the gender roles that expect how women and men ought to behave in their intimate relationships (Pence {\&} Paymar, 1993). It sees the root causes of intimate partner violence as the outcome of living a society that condones aggressive behaviours committed by males, whilst socialising females to be non-violent. The research findings presented demonstrate that men are the offenders while women are the victims. Therefore, feminist theory is most appropriate to use in this research when critically examining intimate partner violence and alcohol collectively. However, it must be stressed that men can also become victims of intimate partner violence (Walklate, 2004). This research will focus particularly on alcohol and its association with intimate partner violence.},
@@ -208,11 +231,10 @@ volume = {46},
 year = {2008}
 }
 @misc{BBC,
-month = {jul},
-publisher = {BBC Sport},
+author = {{BBC Sport}},
+year = {2018},
 title = {{World Cup 2018: Record-breaking online {\&} viewing figures for BBC}},
-url = {https://www.bbc.co.uk/sport/football/44850988},
-year = {2018}
+url = {https://www.bbc.co.uk/sport/football/44850988}
 }
 @article{Brooks-Hay2018,
 author = {Brooks-Hay, Oona and Lombard, Nancy},
